--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -1,7 +1,7 @@
 <!-- Bannière Download appli mobile -->
 <appdownload-banner></appdownload-banner>
 <!-- Menu Not connected -->
-<nav class="top-nav top-nav-trans dark-primary-color" role="navigation" ng-hide="user">
+<nav class="top-nav top-nav-trans dark-primary-color" role="navigation" ng-if="!user">
     <div class="container">
         <div class="nav-wrapper">
             <a href="/#/" class="brand-logo"><img src="assets/images/logo-mini.png" height="30px"/></a>
