--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -37,7 +37,7 @@
         </ul>
     </div>
 
-    <div class="row" ng-show="events.length === 0">
+    <div class="row" ng-if="events.length === 0">
         <div class="col s12">
             <div class="card">
                 <div class="row center">
