--- a/src/app/components/directives/pricing/pricing.html
+++ b/src/app/components/directives/pricing/pricing.html
@@ -153,7 +153,7 @@
                                 <h3 class="center-align col s12 secondary-text-color">{{'pricing.offers.standard.priceInvite' | translate}} € {{'pricing.offers.standard.period' | translate}} </h3>
                             </div>
                         </div>
-                        <div class="row" ng-show="subscribeButton">
+                        <div class="row" ng-if="subscribeButton">
                             <div class="center-align col s12"> 
                                 <a class="btn waves-effect waves-light accent-color"
                                     href="#/signupStart" translate="pricing.subscribe-btn">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                         <!-- actions buttons -->
-                        <div class="row" ng-show="invitationButton">
+                        <div class="row" ng-if="invitationButton">
                             <div class="col s12 center-align">
                                 <button type="submit" translate="commons.buttons.accept"
                                         class="btn waves-effect waves-white accent-color"
