--- a/src/app/components/directives/user/avatar/avatar.html
+++ b/src/app/components/directives/user/avatar/avatar.html
@@ -2,7 +2,7 @@
     <figure>
         <div nv-file-over nv-file-drop uploader="uploader">
             <img ng-src="{{getAvatar(person.avatar)}}" class="circle responsive-img" width="{{width}}" />
-            <div ng-show="showSpinner" class="text-center overlayed-spinner">
+            <div ng-if="showSpinner" class="text-center overlayed-spinner">
                 <i class="fa fa-circle-o-notch fa-spin fa-3x"></i>
             </div>
         </div>
