--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div style="padding:10px;" ng-if="!loading" ng-show="noStat">
+        <div style="padding:10px;" ng-if="!loading" ng-if="noStat">
             <div class="row center-align">
                 <div class="col s4" style="background-image:url(/assets/images/trophy1.png); 
                                            background-repeat:no-repeat; 
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div class="center-align" ng-hide="noStat" translate="stats.resumeTab.noData"></div>
+        <div class="center-align" ng-if="!noStat" translate="stats.resumeTab.noData"></div>
 
     </div>
 
