--- a/src/app/modules/commons/users/invitation/subscribeEnd.html
+++ b/src/app/modules/commons/users/invitation/subscribeEnd.html
@@ -85,7 +85,7 @@
                             </div>
                         </div>
 
-                        <div ng-show="catAgeSelectOK">
+                        <div ng-if="catAgeSelectOK">
                             <div class="row hide-on-large-only">
                                 <div class="col input-field s12">
                                     <label>{{'signupEndPage.tabFindClub.form.label.categoryAge' | translate}} <span
