--- a/src/app/modules/sandbox/effective/writeEffective.html
+++ b/src/app/modules/sandbox/effective/writeEffective.html
@@ -6,20 +6,20 @@
     <div class="row">
         <div class="col s12">
             <div class="row colorMain white-text center-align">
-                <div ng-hide="addEffectiveTitle">
+                <div ng-if="!addEffectiveTitle">
                     <div class="col s1">    
                         <i class="material-icons md-36">mode_edit</i>
                     </div>
                     <div class="col s11">
-                        <h5>{{'updateEffective.title' | translate }}</h5>
+                        <h5 translate="updateEffective.title"></h5>
                     </div>
                 </div>
-                <div ng-show="addEffectiveTitle">
+                <div ng-if="addEffectiveTitle">
                     <div class="col s1">    
                         <h5><i class="fa fa-plus-square-o"></i></h5>
                     </div>
                     <div class="col s11">
-                        <h5>{{'addEffective.title' | translate }}</h5>
+                        <h5 translate="addEffective.title"></h5>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                              required
                              ng-class="{ 'has-error' : effectiveCaracterSection.effectiveLabel.$invalid && !effectiveCaracterSection.effectiveLabel.$pristine }">
                         <span class="small red-text text-lighten-1"
-                                    ng-show="effectiveCaracterSection.effectiveLabel.$invalid && !effectiveCaracterSection.effectiveLabel.$pristine" translate="effectiveErrors.Label"></span>
+                                    ng-if="effectiveCaracterSection.effectiveLabel.$invalid && !effectiveCaracterSection.effectiveLabel.$pristine" translate="effectiveErrors.Label"></span>
                     </div>
 
                     <div class="input-field col m2 s6">
@@ -53,7 +53,7 @@
                         </select>
                         <br>
                         <span class="small red-text text-lighten-1"
-                                ng-show="effectiveCaracterSection.effectiveCategoryAge.$invalid && !effectiveCaracterSection.effectiveCategoryAge.$pristine" translate="effectiveErrors.CategoryAge"></span>
+                                ng-if="effectiveCaracterSection.effectiveCategoryAge.$invalid && !effectiveCaracterSection.effectiveCategoryAge.$pristine" translate="effectiveErrors.CategoryAge"></span>
                     </div>
                 </div>
             </div>
@@ -63,9 +63,7 @@
                 <div class="col s12">
                     <ul class="collection with-header">
                         <li class="collection-header blue-grey-text text-darken-2">
-                            <h5 class="card-title"> 
-                                {{'effectiveLabels.effectiveTabMembers' | translate }}
-                            </h5>
+                            <h5 class="card-title" translate="effectiveLabels.effectiveTabMembers"></h5>
                             <span class="small right-align">{{selectedPlayers.length}} {{'effectiveLabels.effectiveNbPlayers' | translate }}</span>
                             <div class="input-field">
                                 <label for="query" translate="commons.buttons.filter"></label>
